# opensearch-migrations-demo

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docs/: dashboard.tape  demo.tape
src/: lib.rs  main.rs
src/command/: app.rs  cli.rs  mod.rs
src/core/: error.rs  mod.rs  runner.rs  state.rs  update.rs  util.rs
src/domain/: aws.rs  manifests.rs  mod.rs  model.rs  plan.rs  terraform.rs  wizard.rs
src/view/: dashboard.rs  mod.rs  progress.rs  tui.rs  ui.rs
terraform/: README.md
terraform/aws-source/: main.tf
terraform/aws-target/: main.tf
tests/: cli_dispatch.rs  manifests_and_terraform.rs  provision_pipeline.rs
