[package]
name = "migration-assistant-demo"
version = "0.1.0"
edition = "2021"
# Build/test against 1.96.0 (see rust-toolchain.toml). Above every dependency
# floor (ratatui 0.30 needs >=1.88).
rust-version = "1.96"
description = "Interactive TUI harness that provisions a test environment for the OpenSearch Migration Assistant"
license = "Apache-2.0"
default-run = "ma-demo"

[[bin]]
name = "ma-demo"
path = "src/main.rs"

[lib]
name = "ma_demo"
path = "src/lib.rs"

# Dependencies are kept deliberately minimal, mirroring the migration-assistant
# CLI this harness sets up for:
#   ratatui        the TUI (pulls crossterm, the terminal backend).
#   serde(+_json)  parse/emit the saved plan (plan.json) + manifests.
# The wizard, provisioning planners, manifest/compose/terraform emitters, and
# the external-tool seam are all hand-rolled (no clap / anyhow / thiserror).
[dependencies]
ratatui = { version = "0.30.1", default-features = false, features = [
    "std",
    "crossterm",
    "layout-cache",
    "all-widgets",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = 0
incremental = false
